[package]
name = "sierpinskis-triangle"
version = "0.1.0"
authors = ["RyushiAok <55625375+RyushiAok@users.noreply.github.com>"]
edition = "2021"

[scripts]
build-wasm = "wasm-pack build --target web"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

getrandom = { version = "0.2.10", features = ["js"] }
rand = "0.8.5"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.64", features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
futures = "0.3.28"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
